# ultra-siem

./: .gitignore  ATTACK_TESTING_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CROSS_PLATFORM_GUIDE.md  DEEP_ANALYSIS_REPORT.md  DEMO_READY_SUMMARY.md  DEPLOYMENT_SUMMARY.md  ENTERPRISE_PRODUCTION_READY.md  FINAL_PRODUCTION_CERTIFICATION.md  FINAL_STATUS.txt  FINAL_VERIFICATION.ps1  GOVERNANCE.md  GRAFANA_DASHBOARD_SETUP.md  INSTALLATION_GUIDE.md  LICENSE  Makefile  PRESENTATION_DEMO_GUIDE.md  QUANTUM_PRODUCTION_READY.md  QUICK_FIX_GUIDE.md  README.md  REAL_DETECTION_STATUS.md  REAL_TIME_TESTING_GUIDE.md  SECURITY.md  SIEM_QUICK_ACCESS.md  SMTP_SETUP_GUIDE.md  ULTRA_SIEM_ACCESS_GUIDE.md  ULTRA_SIEM_COMPLETE_IMPLEMENTATION_SUMMARY.md  ULTRA_SIEM_FINAL_COMPLETION_REPORT.md  ULTRA_SIEM_FULL_VALIDATION.ps1  USER_INSTALLATION_COMPLETE.txt  WORLD_CLASS_FEATURES_SUMMARY.md  ZERO_LATENCY_PRODUCTION_READY.md  attack_control_center.ps1  auto_scaling_controller.ps1  brilliant_cleanup.ps1  bulletproof_monitor.ps1  chaos_monkey.ps1  demo_quick_start.ps1  (+22 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
clickhouse/: config.xml  users.xml
collectors/: README.md  aws_cloudwatch_collector.py  azure_monitor_collector.py  custom_collector.py  custom_collector_config.yaml  firewall_collector.py  gcp_logging_collector.py  syslog_collector.py  windows_event_collector.ps1
compliance/: report_generator.ps1
config/: incident_response.conf  nats.conf  real_detection.conf  threat_detection.conf
demo/: index.html
disaster_recovery/: orchestrator.ps1
docs/: API.md  DEPLOYMENT_GUIDE.md  QUICK_START.md  TROUBLESHOOTING_GUIDE.md  UPGRADE_GUIDE.md  dashboard_creation_guide.md
examples/: docker-compose.example.yml  nginx.conf
go-services/: Dockerfile  go.mod  go.sum  main.go  main_test.go
grafana/: behavioral_analytics_dashboard.json  compliance_dashboard.json  corrected_siem_dashboard.json  executive_dashboard.json  network_security_dashboard.json  performance_dashboard.json  soc_operations_dashboard.json  ultra_siem_health_dashboard.json  user_activity_dashboard.json
monitoring/: alert_rules.yml  ebpf_profiler.ps1  prometheus.yml  ultra_siem_health_rules.yml
rust-core/: Cargo.toml  Dockerfile  Dockerfile.universal
rust-core/benches/: event_processing.rs  pattern_matching.rs  threat_detection.rs
rust-core/src/: advanced_threat_detection.rs  ai_demo.rs  compliance.rs  cuda_kernels.rs  enrichment.rs  error_handling.rs  gpu_engine.rs  incident_response.rs  lib.rs  main.rs  ml_engine.rs  optimized_pattern_matcher.rs  quantum_detector.rs  real_detection.rs  simple_main.rs  supervisor.rs  threat_detection.rs  universal_main.rs  zero_latency_detector.rs
scripts/: attack-simulation.ps1  benchmark.ps1  bulletproof_deployment.ps1  deploy_quantum_siem.ps1  deploy_universal.sh  deploy_zero_latency.ps1  enterprise_deployment.ps1  fix_all_paths.ps1  fix_builds.ps1  fix_builds_corrected.ps1  fix_go_path.ps1  fix_rust_path.ps1  fix_zig_path.ps1  generate_real_events.ps1  install_requirements.ps1  install_user_requirements.ps1  load_test.js  performance_optimization.ps1  production_simulation.ps1  quick_fix_rust.ps1  security_hardening.ps1  setup_dashboards.ps1  setup_dashboards_simple.ps1  setup_siem_complete.ps1  setup_windows.ps1  start_services.ps1  start_siem_basic.ps1  test_wsl_deployment.ps1  validate_production.ps1  verify-detections.ps1
(+43 files in other folders)
